--- a/roles/install-docker/tasks/main.yml
+++ b/roles/install-docker/tasks/main.yml
@@ -16,13 +16,45 @@
 
 - name: Install dependencies
   apt:
-    name: "{{ packages }}"
+    name: "{{ docker_required_packages }}"
     state: present
     update_cache: yes
-  vars:
-    packages: 
-    - apt-transport-https
-    - ca-certificates
-    - curl 
-    - software-properties-common
-    - gnupg-agent
+
+- name: Add Docker GPG apt Key
+  apt_key:
+    url:  "{{ docker_gpg_url }}"
+    state: present
+
+- name: Add Docker Repository
+  apt_repository:
+    repo: "{{ docker_repo }}"
+    state: present
+
+- name: install a docker
+  apt:
+    name: "{{ docker_packges }}"
+    state: latest
+    update_cache: yes
+- name: Install Python Docker module
+  pip:
+    name: docker
+
+- name: Add adminstrator to docker group
+  user:
+    name: "{{ admin_user }}"
+    groups: docker
+    append: yes
+
+
+
+- name: Install Docker Compose
+  get_url:
+    url: "{{ docker_compose_url }}"
+    dest: /usr/local/bin/docker-compose
+    mode: u+x,g+x,o+x
+
+- name: assicurati che docker sia attivo
+  service:
+    name: docker
+    state: started
+    enabled: yes
