--- a/roles/install-docker/vars/main.yml
+++ b/roles/install-docker/vars/main.yml
@@ -8,6 +8,7 @@ docker_required_packages:
   - "software-properties-common"
   - "python3-pip"
   - "python3-setuptools"
+  - "docker-compose"
 
 docker_gpg_url: https://download.docker.com/linux/ubuntu/gpg
 
