--- a/roles/mariadb-master/vars/main.yml
+++ b/roles/mariadb-master/vars/main.yml
@@ -1,3 +1,4 @@
-mysql_root_pass: mypass
 mariadb_image: mariadb:10.3
 container_name: mariadb
+#mysql_root_password: mypass
+#mysql_users_password: mypass
